--- a/WebApi/appsettings.Development.json
+++ b/WebApi/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ShirtStoreManagement": "Server=localhost,1433;Database=master;User Id=sa;Password=MyS3cure!Pwd;TrustServerCertificate=True;Encrypt=False;Initial Catalog=ShirtStoreManagement"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
